fixed: overlaping timeline text

--- a/css/style.css
+++ b/css/style.css
@@ -941,7 +941,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    row-gap: 125px;
+    row-gap: 150px;
 }
 
 .schedule-items .item{
@@ -1546,12 +1546,13 @@ body{
     }
 
     .schedule-items .item{
-        position: static;
+        position: relative;
         display: block;
         width: 100%;
     }
 
     .schedule-items .item::before{
+        position: absolute;
         display: block;
         left: -28px;
         top: 22px;
